updated date for work exp

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -72,7 +72,7 @@ import "../styles/global.css";
     
       <RowEntry
         description="Utilized knowledge of cryptography and privacy-enhancing technologies gained during 'Cypherpunk' master's program to develop secure communication systems for the company's clients."
-        name="09/2020 - Present"
+        name="09/2018 - 06/2020"
         title="Security Engineer"
         subTitle="Tor Network Labs"
       />
